Fixed three icon spacing, again

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -253,7 +253,7 @@ body {
       width: 18.75vh;
       top: 14.5vh;
       left: 49%;
-      transform: translate(-50%, 0%);
+      transform: translate(-50%, -50%);
     }
     .b40.center {
       top: 47%;
